# wbcryptolib-add-accuracy-test

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  requireFlag.cmake  rerun.sh  run.sh
doc/zh-CN/: convention.md  index.md  wbcryptlib 功能介绍.md
doxygen/: wbcrypto.doxyfile
doxygen/input/: doc_mainpage.h
include/crypto/: adaptive_error.h  aes.h  config.h  error.h  md.h  modes.h  sm2.h  sm3.h  sm4.h  sm4_bs.h  sm4_bs_mode_gcm.h  sm4_bs_ro.h  sm4_lut.h  speed.h  speed_test.h
include/rng/: entropy.h  sm3_rng.h
include/wbcrypto/: ecdsacoop.h  keybox_wbsm2.h  rsacoop.h  sm2coop.h  wbaes.h  wbaes_modes.h  wbsm2.h  wbsm4.h  wbsm4_generator.h  wbsm4_se.h  wbsm4_se_la.h  wbsm4_se_local.h  wbsm4_xl.h  wbsm4_xl_la.h
include/wbmatrix/: WBMatrix.h
jna/: build.sh
jni/: CMakeLists.txt
jni/include/: net_coding_wbcryptolib_nativelib_RBGJNI_MbedtlsCtrDRBG.h  net_coding_wbcryptolib_nativelib_SM2CoopJNI.h  net_coding_wbcryptolib_nativelib_SM2CoopJNI_Context.h  net_coding_wbcryptolib_nativelib_SM2CoopJNI_DecryptSessionState.h  net_coding_wbcryptolib_nativelib_SM2CoopJNI_SignSessionState.h
jni/include/debug/: debug_includes.h  module_readme.h  printers.h
jni/include/javatypes/: apache_pair.h  module_readme.h  noe.h
jni/include/jni_utils/: jarray_view.h  module_readme.h  util_functions.h
jni/include/mbedtlspp/: bignum.h  ctr_drbg.h  ecp.h  entropy.h  exception.h  module_readme.h  raii_template.h
jni/include/memory_view/: array_view.h  buffer_view.h  module_readme.h
jni/include/rbg/: mbedtls_ctr_drbg.h  module_readme.h  rbg.h
jni/include/wbcryptopp/: module_readme.h  sm2coop.h
jni/java/: .project  build.gradle  help.txt  settings.gradle
jni/java/gradle/wrapper/: gradle-wrapper.properties
jni/java/src/main/java/net/coding/wbcryptolib/nativelib/: DLLLoader.java  RBGJNI.java  SM2CoopJNI.java
jni/java/src/main/java/net/coding/wbcryptolib/rbg/: MbedtlsCtrDRBG.java  RBG.java
jni/java/src/main/java/net/coding/wbcryptolib/sm2coop/algorithm/: SM2CoopDecryptClient.java  SM2CoopDecryptServer.java  SM2CoopEncrypter.java  SM2CoopSignClient.java  SM2CoopSignServer.java  SM2CoopVerifier.java
jni/java/src/main/java/net/coding/wbcryptolib/sm2coop/ecparam/: SM2P256V1ECParams.java
jni/java/src/main/java/net/coding/wbcryptolib/sm2coop/key/: SM2CoopClientPrivateKey.java  SM2CoopPublicKey.java  SM2CoopServerPrivateKey.java
jni/java/src/main/java/net/coding/wbcryptolib/util/: NativeOperationException.java
jni/java/src/test/java/net/coding/wbcryptolib/rbg/: MbedtlsCtrDRBGTest.java
jni/java/src/test/java/net/coding/wbcryptolib/sm2coop/: TestSM2CoopKey.java
jni/java/src/test/java/net/coding/wbcryptolib/sm2coop/algorithm/cipher/: SM2CoopClientDecryptSessionTest.java  SM2CoopDecryptClientTest.java  SM2CoopDecryptServerTest.java  SM2CoopEncryptDecryptIntegrationTest.java  SM2CoopEncrypterTest.java
jni/java/src/test/java/net/coding/wbcryptolib/sm2coop/algorithm/sign/: SM2CoopSignVerifyIntegrationTest.java
jni/lib/jnihpp/: CMakeLists.txt
jni/src/: mbedtls_ctr_drbg.cpp  sm2coop.cpp  sm2coop_context.cpp  sm2coop_decryptSessionState.cpp  sm2coop_signSessionState.cpp
jni/src/mbedtlspp/: ecp.cpp
jni/src/wbcryptopp/: sm2coop.cpp
python/: sm4_bs.py  sm4_bs_multiprocesses.py  sm4_bs_ro.py  sm4_lut.py  test.py
sample/: CMakeLists.txt  hex_utils.h  sample_speed_test.c
sample/keybox_wbsm2/: CMakeLists.txt  sample_keybox_wbsm2.c
sample/keybox_wbsm2/commons/: sample_common_drbg.c  sample_common_keys.h
sample/sm2/: CMakeLists.txt  sample_sm2_encrypt_decrypt.c  test_data.h
sample/sm2coop/: CMakeLists.txt  asserts.h  keygen.c  keygen.h  sample_sm2coop_encrypt_decrypt.c  sample_sm2coop_sign_verify.c
sample/sm3/: sample_sm3_hash.c
sample/sm4/: CMakeLists.txt  hex_utils.h  sample_sm4_gcm_enc_dec.c
sample/wbaes/: CMakeLists.txt  sample_wbaes.c
sample/wbsm2/: CMakeLists.txt  hex_utils.h  sample_encrypt_decrypt.c  sample_keygen.c  sample_sign_verify.c
sample/wbsm2/commons/: sample_common_drbg.h  sample_common_keys.c
sample/wbsm4/: CMakeLists.txt  sample_cbc_encrypt_decrypt.c  sample_ecb_encrypt_decrypt.c  sample_gcm_encrypt_decrypt.c  sample_wbsm4_se.c  sample_wbsm4_xl.c  sample_wbsm4_xl_la.c  sample_whitebox_table_generate.c
sample/wbsm4/commons/: sample_common_keys.c  sample_common_keys.h
src/: dummy.c
src/asn1/: asn1_utils.c
src/ecdsacoop/: ecdsacoop.c
src/keybox_wbsm2/: keybox_wbsm2.c  keybox_wbsm2_read.c  keybox_wbsm2_write.c
src/md/: md.c
src/modes/: cbc128.c  ctr128.c  ecb128.c  gcm128.c  gcmf.c  modes_lcl.h
src/rng/: CMakeLists.txt  entropy.c  sm3_rng.c
src/rsacoop/: rsacoop.c
src/sm2/: sm2.c  sm2_curve.c  sm2_utils.c
src/sm2coop/: sm2coop.c
src/sm3/: sm3.c
src/sm4/: sm4.c  sm4_cbc.c  sm4_ctr.c  sm4_ecb.c  sm4_gcm.c  sm4_lut.c
src/sm4_bs/: sm4_bs.c  sm4_bs_mode_gcm.c  sm4_bs_ro.c
src/speed_test/: speed.c  speed_test.c
src/wbaes/: aes.c  wbaes.c  wbaes_cbc.c  wbaes_ctr.c  wbaes_ecb.c  wbaes_gcm128.c
src/wbmatrix/: wbmatrix.c
src/wbsm2/: wbsm2.c
src/wbsm4/: wbsm4.c  wbsm4_cbc.c  wbsm4_ecb.c  wbsm4_gcm.c  wbsm4_gcmf.c  wbsm4_generator.c  wbsm4_se.c  wbsm4_xl.c  (+3 more)
test/: CMakeLists.txt  asn1utils_test.c  ecdsacoop_test.c  hex_utils.h  rsacoop_test.c  sm2coop_perf_test.cpp  sm4_bs_ro_test.c  sm4_bs_test.c  sm4_test.c  wbsm4_test.c
test/keybox_wbsm2/: asserts.h  keybox_wbsm2_asn1_io_test.c  keybox_wbsm2_test.c
test/muti_speed/: muti_speed_test_wbaes.c  muti_speed_test_wbsm4_se.c  muti_speed_test_wbsm4_xl_la.c
test/sm2/: sm2_encrypt_smoke_test.c  sm2_sign_smoke_test.c  test_data.h
test/sm2coop/: asserts.h  keygen.c  keygen.h  sm2coop_context_test.c  sm2coop_encrypt_decrypt_test.c  sm2coop_keygen_test.c  sm2coop_sign_test.c
test/speed/: ksecdsa_speed_test  ksecdsa_speed_test.c  kssm2_speed_test.c  speed_test_sm4_lut.c  speed_test_wbaes.c  speed_test_wbsm4_se.c  speed_test_wbsm4_se_la.c  speed_test_wbsm4_xl_la.c
test/wbaes/: CMakeLists.txt  aes_test.c  test_local.c  test_local.h  wbaes_test.c
test/wbsm2/: keygen.c  keygen.h  wbsm2_encrypt_decrypt_test.c  wbsm2_keygen_test.c  wbsm2_sign_verify_test.c
(+29 files in other folders)
